@@ -76,6 +76,6 @@ public class CategoryService {
                     itemCount,
                     lowStockCount
             );
-        }).collect(Collectors.toList());
+        }).toList();
     }
 }
